--- a/Lesson1/Properties/launchSettings.json
+++ b/Lesson1/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {   
     "Lesson1": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "book",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
