--- a/Lesson1/Properties/launchSettings.json
+++ b/Lesson1/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Lesson1": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "clients",
+      "launchUrl": "users",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
