--- a/Lesson1/appsettings.json
+++ b/Lesson1/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=DESKTOP-0Q7NADI\\SQLEXPRESS;Initial Catalog=NetCoreDB;Integrated Security=True"
+    "Default": "Data Source=DESKTOP-0Q7NADI\\SQLEXPRESS;Initial Catalog=NetCoreDB5;Integrated Security=True"
   }
 }
