Fixed searching nearest libraries method; Added authOptions;

--- a/Lesson1/appsettings.json
+++ b/Lesson1/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=DESKTOP-0Q7NADI\\SQLEXPRESS;Initial Catalog=NetCoreDB5;Integrated Security=True"
+  },
+  "AuthOptions": { 
+    "Issuer": "ITEA",
+    "Audience": "Students",
+    "Key": "lskdbflkafsdnsopa;sdijf",
+    "LifetimeInSeconds": "6000"
   }
 }
