Listned 5th lection

--- a/ClassLibrary1/Lesson1_BL.csproj
+++ b/ClassLibrary1/Lesson1_BL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Lesson1_DAL\Lesson1_DAL.csproj" />
   </ItemGroup>
 
