--- a/Lesson1/Properties/launchSettings.json
+++ b/Lesson1/Properties/launchSettings.json
@@ -3,8 +3,8 @@
   "profiles": {   
     "Lesson1": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "users",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
