Added smtp confirmation, checking email

--- a/Lesson1/appsettings.json
+++ b/Lesson1/appsettings.json
@@ -34,5 +34,15 @@
   },
   "HashOptions": {
     "Salt": "fKk+GkLvQBjAhe2VBDBnwg=="
+  },
+  "SmtpConfiguration": {
+    "SenderMail": "lazakoyev@ukr.net",
+    "SenderPassword": "NyksXbfwF9zTExDp",
+    "SenderName": "Eugene",
+    "Host": "smtp-relay.sendinblue.com",
+    "Port": 587
+  },
+  "EncryptionConfiguration": {
+    "Key": "nGow0X4/xJHkwounQmqVOg=="
   }
 }
