Added chat hub logic; Implemented signIn method and room logic

--- a/Lesson1/Lesson1.csproj
+++ b/Lesson1/Lesson1.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\Lesson1_BL.csproj" />
+    <ProjectReference Include="..\Lesson1_Core\Lesson1_Core.csproj" />
   </ItemGroup>
 
 
