--- a/Lesson1/appsettings.json
+++ b/Lesson1/appsettings.json
@@ -44,5 +44,8 @@
   },
   "EncryptionConfiguration": {
     "Key": "nGow0X4/xJHkwounQmqVOg=="
+  },
+  "RedisOptions": {
+    "DefaultConnection": "127.0.0.1:5002"
   }
 }
